--- a/pom.xml
+++ b/pom.xml
@@ -123,10 +123,6 @@
             <version>1.9.2</version>
         </dependency>
         <dependency>
-            <groupId></groupId>
-            <artifactId></artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>3.0</version>
@@ -134,7 +130,9 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-log4j2</artifactId>
+            <version>2.1.1.RELEASE</version>
         </dependency>
+
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
